@@ -1,0 +1,55 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+   "http://www.w3.org/TR/html4/loose.dtd">
+
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <title>Scrollable Element With Transform</title>
+  <style type="text/css" media="screen">
+    #container {
+      position: absolute;
+      width: 200px; 
+      height: 200px; 
+      overflow:hidden;
+      z-index: 0;
+      border: 1px solid black;
+      -webkit-transform: rotate(0);
+    }
+    
+    #inner {
+      position: relative;
+      width: 200px;
+      height: 500px;
+      background-color: gray;
+    }
+  </style>
+</head>
+
+<body>
+  
+  <p>Gray div should be clipped by overflow: scroll div</p>
+  <div id="container">
+    <div id="inner">
+      <p>
+      ihasdkas sdkha sjdkahk dahsd jashd kashd kasdh aksd haskdh aksd h
+      asfadjaskdh akdhaskd haskd haskd haskd haskdhka shdkasdh kas hdk 
+      asd asd asdas das d
+      </p>
+
+      <p>
+      ihasdkas sdkha sjdkahk dahsd jashd kashd kasdh aksd haskdh aksd h
+      asfadjaskdh akdhaskd haskd haskd haskd haskdhka shdkasdh kas hdk 
+      asd asd asdas das d
+      </p>
+
+      <p>
+      ihasdkas sdkha sjdkahk dahsd jashd kashd kasdh aksd haskdh aksd h
+      asfadjaskdh akdhaskd haskd haskd haskd haskdhka shdkasdh kas hdk 
+      asd asd asdas das d
+      </p>
+    </div>
+  </div>
+
+</body>
+</html>
+
